--- a/revert.html
+++ b/revert.html
@@ -6,6 +6,7 @@
     <title>Git Revert <command></title>
 </head>
 <body>
-    <h2>Git revert <command></h2>
+    <h2>Git revert command</h2>
+        <h2>git revert2</h2>
 </body>
 </html>
